# LibImageCpp

./: .travis.yml  CMakeLists.txt  README.md
libimagecpp/: CMakeLists.txt  image.cpp  image.h
